# tidalrs

./: .gitignore  Cargo.toml  README.md
examples/: album_exploration.rs  audio_streaming.rs  authentication.rs  basic_search.rs  favorites_management.rs  playlist_management.rs
src/: album.rs  artist.rs  lib.rs  playlist.rs  search.rs  track.rs
tests/: builder_pattern.rs  example_search_result.json  search_results_deserialization.rs
